src/test/deca/context/invalid/Objet/Void-Field.deca
// Description:
//      Method with a void type parameter
//
// Results:
//      Line 11 : Rule (2.5) Field cannot be void
//
// History:
//      created on 17/1/2022

class A {
   void x;
}
